# duckServer

./: .gitignore  CMakeLists.txt  Server.cpp  SimpleSerial.cpp  SimpleSerial.hpp  chatClient.cpp  chatParticipant.hpp  chatRoom.hpp  chatServer.cpp  chatServer.hpp  chatSession.hpp  chat_message.hpp  configReader.hpp  configuration.json  jsondata.json  serialSession.cpp  serialSession.hpp
Matlab/: createMessage.m  duckClient.m
